# diffusion-manipulation

./: .gitignore  README.md  pyproject.toml
results/: analysis_results.json
scripts/: download_data.py  evaluate.py  modal_train.py  run_analysis.py  run_ndemos_ablation.py  train.py  visualize_dataset.py
src/diffusion_manipulation/: cli.py  config.py
src/diffusion_manipulation/data/: dataset.py  download.py  normalizer.py  replay_buffer.py  visualize.py
src/diffusion_manipulation/env/: robosuite_env.py  video_recorder.py
src/diffusion_manipulation/evaluation/: analysis.py  evaluator.py
src/diffusion_manipulation/model/: conditional_unet1d.py  noise_schedulers.py  unet_components.py  vision_encoder.py
src/diffusion_manipulation/policy/: base_policy.py  diffusion_policy.py
src/diffusion_manipulation/training/: ema.py  trainer.py
tests/: conftest.py
tests/data/: test_dataset.py  test_download.py  test_normalizer.py  test_replay_buffer.py  test_visualize.py
tests/env/: test_video_recorder.py
tests/evaluation/: test_analysis.py  test_evaluator.py
tests/model/: test_conditional_unet1d.py  test_noise_schedulers.py  test_unet_components.py  test_vision_encoder.py
tests/policy/: test_diffusion_policy.py
tests/training/: test_ema.py  test_trainer.py
